# second-brain-obsidian-template

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
{{ cookiecutter.project_slug }}/: .gitignore  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.obsidian/: app.json  bookmarks.json  community-plugins.json  core-plugins.json  daily-notes.json  graph.json  hotkeys.json
{{ cookiecutter.project_slug }}/.obsidian/plugins/mermaid-tools/: data.json
{{ cookiecutter.project_slug }}/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
{{ cookiecutter.project_slug }}/.obsidian/plugins/obsidian-memos/: data.json
{{ cookiecutter.project_slug }}/.obsidian/plugins/obsidian-projects/: data.json
{{ cookiecutter.project_slug }}/.obsidian/plugins/obsidian-tasks-plugin/: data.json
{{ cookiecutter.project_slug }}/.obsidian/plugins/quickadd/: data.json
{{ cookiecutter.project_slug }}/.obsidian/plugins/templater-obsidian/: data.json
{{ cookiecutter.project_slug }}/.obsidian/plugins/workspaces-plus/: data.json  workspaces.json.bak
{{ cookiecutter.project_slug }}/metaRef/index/: Idea MOC.md  Person MOC.md  🗣 LINKS MOC.md  🗣 Meetings MOC.md
{{ cookiecutter.project_slug }}/projects/0_general/: task_overview.md
{{ cookiecutter.project_slug }}/templates/: daily.md  idea.md  link.md  meeting note.md  person.md  project notes.md
